manifests/anaconda-jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anaconda-jupyter
  namespace: anaconda-jupyter
  labels:
    app: anaconda-jupyter
spec:
  ports:
  - port: 8888
    protocol: TCP
    targetPort: ui
  selector:
    app: anaconda-jupyter
